MacViews/a11y: Disable most text-specific attributes for protected textfields.

Cocoa doesn't support these attributes in NSSecureTextfields, so match that with
MacViews.

BUG=692380

Review-Url: https://codereview.chromium.org/2706743002
Cr-Commit-Position: refs/heads/master@{#453418}

Former-commit-id: 54b3acd0692e87dc4d33aa2ffb66ae7697a16f79